@@ -238,7 +238,7 @@ public final class LocalDateTime
             date.getHours(),
             date.getMinutes(),
             date.getSeconds(),
-            (int) (date.getTime() % 1000)
+            (((int) (date.getTime() % 1000)) + 1000) % 1000
         );
     }
 
