@@ -55,6 +55,10 @@ Bug fixes since 2.1
   Addition and subtraction in MonthDay was fixed.
   It previously didn't work when the start value was 29th February.
 
+- LocalDateTime.fromDateFields()
+  This used to fail before 1970 when the input had a milli-of-second field
+  Fixed to not throw an exception
+
 - DateTimeFormatter.parseInto() [3522138]
   The v2.0 changes to handle parsing of month/day on their own (for Feb 29th) cause
   parseInto() to lose the year. This fix reverts behaviour to v1.x so that parseInto()
